<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>psn-ejb</artifactId>
	<packaging>ejb</packaging>
	<parent>
		<groupId>org.emau.icmvc.ganimed.ttp</groupId>
		<artifactId>psn-project</artifactId>
		<version>1.7.10</version>		
	</parent>
	<!-- 
  <build>
  <pluginManagement>
    <plugins>
       <plugin>
                    <groupId>org.bsc.maven</groupId>
                    <artifactId>maven-processor-plugin</artifactId>
                    <version>2.2.4</version>
                    <executions>
                        <execution>
                            <id>process</id>
                            <goals>
                                <goal>process</goal>
                            </goals>
                            <phase>generate-sources</phase>
                            <configuration>
                                <processors>
                                    <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
                                </processors>
                            </configuration>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.hibernate</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
    </plugins>
    </pluginManagement>
  </build>
-->
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<!-- <dependency>
			
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
		</dependency> -->
		<!-- logging fuer eclipselink -->
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
		</dependency>
		<dependency>
			<groupId>org.emau.icmvc.ganimed.ttp</groupId>
			<artifactId>psn-commons</artifactId>
		</dependency>
	
		<dependency>
		    <groupId>org.jboss.as</groupId>
		    <artifactId>jboss-as-security</artifactId>
		    <version>7.1.1.Final</version>
		</dependency>

		<dependency>
		    <groupId>org.jboss.ejb3</groupId>
		    <artifactId>jboss-ejb3-ext-api</artifactId>
		    <version>2.2.0.Final</version>
		</dependency>
		<!-- neu java 9 -->
		<dependency>
		    <groupId>javax.jws</groupId>
		    <artifactId>javax.jws-api</artifactId>
		    <version>1.1</version>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.0</version>
		</dependency>
		<!-- neu java 9 ende-->
		<!-- neu elytron ???-->
		<!-- <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron</artifactId>
            <version>1.1.0.Final</version>
        </dependency> -->
        <!-- ende neu elytron-->
<!--
		<dependency>
		    <groupId>org.jboss.spec.javax.annotation</groupId>
		    <artifactId>jboss-annotations-api_1.2_spec</artifactId>
		    <version>1.0.2.Final</version>
		    <scope>provided</scope>
		</dependency>
			   
		<dependency>
		    <groupId>org.jboss.spec.javax.ejb</groupId>
		    <artifactId>jboss-ejb-api_3.2_spec</artifactId>
		    <version>1.0.1.Final</version>
		    <scope>provided</scope>
		</dependency>
 -->
			
	</dependencies>
	
	<!-- neu. Für Java 9 -->
	  <build>
	    <pluginManagement>
	      <plugins>
	        <plugin>
	          <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-ejb-plugin</artifactId>
	          <version>3.0.1</version>
	        <configuration>
	        <source>9</source>
	        <target>9</target>
	        <ejbVersion>3.1</ejbVersion>
	        <jdkToolchain>
	            <version>9</version>
	        </jdkToolchain>
	        <compilerArgs>
            	<arg>--add-modules</arg>
            	<!-- <arg>java.xml.bind</arg> -->
            	<arg>java.se.ee</arg>
          	</compilerArgs>          	
	    </configuration>
	          
	        </plugin>
	      </plugins>
	    </pluginManagement>
	  </build>
	<properties>
	   <maven.compiler.source>9</maven.compiler.source>
	   <maven.compiler.target>9</maven.compiler.target>
	</properties>
	<!-- Ende Java 9 -->

	

</project>